Update BioCro XML to include SA and improvements

--- a/BioCro/biocro_in_pecan.Rmd
+++ b/BioCro/biocro_in_pecan.Rmd
@@ -312,20 +312,13 @@ PEcAn.visualization::plot.netcdf("biocro_results/out/SA-salix-chi_leaf-0.159/200
 knitr::include_graphics("biocro_lai_welsch.png")
 ```
 
-
-
-
-
-
-
-
 # BioCro Run Using Welsch With New PFT
 
 1. Access RStudio in a browser by navigating to [welsch.cyverse.org:8787/](welsch.cyverse.org:8787/). Log in using your username and password, which can be requested [here](). 
 
 2. Create a new folder that will hold the necessary files for the run in your home directory by going to the Terminal tab and typing in `mkdir biocro_darpa_files`. This new folder should appear in your file structure under the Files tab. 
 
-3. The first needed file is an XML that contains the configuration information required to get the data and run the model. This example run is for the Setaria wild type PFT for a site at the Donald Danforth Center in St. Louis, MO using weather data from the entire year of 2004. We are also running ensemble analyse and a meta-analysis, but no sensitivity analysis. 
+3. The first needed file is an XML that contains the configuration information required to get the data and run the model. This example run is for the Setaria wild type PFT for a site at the Donald Danforth Center in St. Louis, MO using weather data from the entire year of 2004. This runs a meta-analysis on specific leaf area (SLA), sensitivity analysis and variance decomposition on eight parameters, and 200 ensemble runs for total biomass. 
 
     Create the file by clicking the new file button with the green plus sign in the upper left hand corner and selecting text file. Copy and paste the content below into this file, click the save button, and save this file as `pecan.biocro.darpa.xml` in the `biocro_darpa_files` folder. 
 
@@ -347,20 +340,25 @@ knitr::include_graphics("biocro_lai_welsch.png")
 
   <pfts>
     <pft>
-      <name>Setaria WT</name>
+      <name>SetariaWT</name>
     </pft>
   </pfts>
 
   <ensemble>
-    <variable>AbvGrndWood</variable>
+    <size>200</size>
+    <variable>TotLivBiom</variable>
   </ensemble>
 
   <meta.analysis>
     <iter>3000</iter>
-    <random.effects>FALSE</random.effects>
+    <random.effects>TRUE</random.effects>
     <threshold>1.2</threshold>
     <update>AUTO</update>
   </meta.analysis>
+
+  <sensitivity.analysis>
+    <variable>TotLivBiom</variable>
+  </sensitivity.analysis>
 
   <model>
     <type>BIOCRO</type>
@@ -370,7 +368,7 @@ knitr::include_graphics("biocro_lai_welsch.png")
 
   <run>
     <site>
-      <id>9000000000</id>
+      <id>9000000004</id>
     </site>
     <inputs>
       <met>
