--- a/BioCro/biocro_in_pecan.Rmd
+++ b/BioCro/biocro_in_pecan.Rmd
@@ -1,9 +1,9 @@
 ---
-output: html_document
+output: github_document
 urlcolor: blue
 ---
 
-# BioCro Run Using the Virtual Machine
+# Section 1: BioCro Run Using the Virtual Machine
 
 1. Download the **VirtualBox** application from [here](https://www.virtualbox.org/) and open the application. Additionally, download the extension pack from the [Downloads page](https://www.virtualbox.org/wiki/Downloads) under the 'VirtualBox 6.0.6 Oracle VM VirtualBox Extension Pack' section. Add the extension pack by opening VirtualBox application, going to "Preferences" -> "Extensions", clicking on the blue box with the green plus sign, and adding the downloaded .vbox-extpack file. 
 
@@ -26,7 +26,7 @@ PEcAn.visualization::plot.netcdf("biocro_results/out/SA-salix-chi_leaf-0.159/200
 knitr::include_graphics("biocro_lai_vm.png")
 ```
 
-# BioCro Run Using University of Arizona's RStudio Instance
+# Section 2: BioCro Run Using University of Arizona's RStudio Instance
 
 1. Access RStudio in a browser by navigating to [welsch.cyverse.org:8787/](welsch.cyverse.org:8787/). Log in using your username and password, which can be requested [here](). 
 
@@ -312,7 +312,7 @@ PEcAn.visualization::plot.netcdf("biocro_results/out/SA-salix-chi_leaf-0.159/200
 knitr::include_graphics("biocro_lai_welsch.png")
 ```
 
-# BioCro Run Using Welsch With New PFT
+# Section 3: BioCro Run Using Welsch With New PFT
 
 1. Access RStudio in a browser by navigating to [welsch.cyverse.org:8787/](welsch.cyverse.org:8787/). Log in using your username and password, which can be requested [here](). 
 
@@ -345,7 +345,8 @@ knitr::include_graphics("biocro_lai_welsch.png")
   </pfts>
 
   <ensemble>
-    <size>200</size>
+    <size>50</size>
+    <variable>NPP</variable>
     <variable>TotLivBiom</variable>
   </ensemble>
 
@@ -357,13 +358,14 @@ knitr::include_graphics("biocro_lai_welsch.png")
   </meta.analysis>
 
   <sensitivity.analysis>
+    <variable>NPP</variable>
     <variable>TotLivBiom</variable>
   </sensitivity.analysis>
 
   <model>
     <type>BIOCRO</type>
     <binary>/home/kristinariemer/pecan/models/biocro/inst/biocro.Rscript</binary>
-    <revision>1.0</revision>
+    <revision>0.95</revision>
   </model>
 
   <run>
