--- a/BioCro/biocro_in_pecan.Rmd
+++ b/BioCro/biocro_in_pecan.Rmd
@@ -345,8 +345,7 @@ knitr::include_graphics("biocro_lai_welsch.png")
   </pfts>
 
   <ensemble>
-    <size>50</size>
-    <variable>NPP</variable>
+    <size>200</size>
     <variable>TotLivBiom</variable>
   </ensemble>
 
@@ -358,7 +357,6 @@ knitr::include_graphics("biocro_lai_welsch.png")
   </meta.analysis>
 
   <sensitivity.analysis>
-    <variable>NPP</variable>
     <variable>TotLivBiom</variable>
   </sensitivity.analysis>
 
@@ -577,7 +575,7 @@ print("---------- PEcAn Workflow Complete ----------")
 
 5. We will then run the newly created XML file through the R script. Then in the Terminal run `biocro_darpa_files/workflow.R --settings biocro_darpa_files/pecan.biocro.darpa.xml`. 
 
-    If this returns an error that says `Permission denied`, first run `chmod u+x biocro_darpa_files/workflow.R` in the terminal to get sufficient permissions to the newly created workflow.R file. Then reattempt running the workflow. 
+    If this returns an error that says `Permission denied`, first run `chmod u+x biocro_darpa_files/workflow.R` in the terminal to get sufficient permissions to the newly created workflow.R file. Then reattempt running the workflow. If the error occurs again, run `chmod u+x biocro_darpa_files/pecan.biocro.darpa.xml`. 
     
     This will take a few minutes to finish. The last line in the console should appear as follows. 
 
@@ -590,39 +588,59 @@ print("---------- PEcAn Workflow Complete ----------")
     To test if this works, you can plot the results from the ensemble runs for biomass. The following code will produce a plot of the time series throughout a year of biomass, of the median, 25th quantile, and 75th quantile for each time step. Create a new R script, copy and paste this code into the script, and run it to produce the figure. 
 
 ```{r, eval=FALSE}
-library(matrixStats)
-library(tidyr)
+# Ensemble Plots
 library(ggplot2)
-library(scales)
+library(data.table)
+
+## Biomass Distributions
+load("~/biocro_darpa_results/ensemble.output.NOENSEMBLEID.TotLivBiom.2004.2004.Rdata")
+ens <- cbind(as.data.frame(t(data.frame(ensemble.output))))
+colnames(ens) <- "TotLivBiom"
+theme_set(theme_minimal() + 
+            theme(axis.text.x = 
+                    element_text(vjust = -1), 
+                  axis.text.y = element_blank(),
+                  axis.ticks = element_blank(), 
+                  axis.line = element_blank(), 
+                  axis.title.x = element_blank(), 
+                  axis.title.y = element_blank(), 
+                  panel.grid.minor = element_blank(), 
+                  panel.border = element_blank()))
+ggplot(data = ens) +
+  geom_density(aes(x = TotLivBiom))
+
+## Biomass Time Series with Quantiles
+load('~/biocro_darpa_results/out/SA-median/biocro_output.RData')
+timeseries <- data.table(day = rep(biocro_result$doy, each = 24), hour = 0:23)
+rm(biocro_result)
 
 load("~/biocro_darpa_results/ensemble.ts.NOENSEMBLEID.TotLivBiom.2004.2004.Rdata")
-biomass_df <- data.frame(ensemble.ts$TotLivBiom)
+ens2 <- t(ensemble.ts[['TotLivBiom']])
 
-quantiles <- rowQuantiles(t(ensemble.ts$TotLivBiom), probs = c(0.25, 0.5, 0.75))
-quantiles_df <- data.frame(quantiles)
+ens2[is.na(ens2)] <- 0
+mean <- rowMeans(ens2, na.rm = TRUE)
+median <- apply(ens2, 1, function(x) median(x, na.rm = TRUE))
+sd <- apply(ens2, 1, function(x) sd(x, na.rm = TRUE))
+lcl <- apply(ens2, 1, function(x) quantile(x, probs = c(0.025), na.rm = TRUE))
+ucl <- apply(ens2, 1, function(x) quantile(x, probs = c(0.975), na.rm = TRUE))
 
-first_hour <- as.POSIXct("2004-01-01 01:00:00")
-datetime <- first_hour
-for(hour in 1:8759){
-  following_hour <- first_hour + hour*60*60
-  datetime <- c(datetime, following_hour)
-}
-quantiles_df$datetime <- datetime
+data_table <- data.table(timeseries, cbind(mean = mean, median = median, 
+                                           sd = sd, lcl = lcl, ucl = ucl))
+data_table_day <- data_table[, list(mean = sum(mean),  median = sum(median), sd = sqrt(sum(sd^2)),
+                                    lcl = sum(lcl), ucl = sum(ucl)), by = day]
 
-quantiles_df_long <- gather(quantiles_df, quantile, value, X25.:X75.)
-ggplot(quantiles_df_long, aes(x = datetime, y = value, color = quantile)) +
-  geom_line() +
-  scale_color_manual(labels = c("25%", "50%", "75%"), 
-                     values = c("grey", "black", "grey")) +
-  labs(x = "Date", y = "Total Biomass (kg C m-2)") +
-  theme_bw() +
-  theme(panel.grid.major = element_blank(), 
-        panel.grid.minor = element_blank(),
-        panel.background = element_blank(), 
-        legend.title = element_blank()) +
-  scale_x_datetime(labels = date_format("%b"))
+daily_bio <- data.frame(data_table_day)
+sd_scale <- 5
+ggplot(data = daily_bio) + 
+  geom_line(aes(day, y = mean)) +
+  geom_ribbon(aes(day, ymin = mean - sd_scale * sd, ymax = mean + sd_scale * sd), alpha = 0.1) +
+  geom_ribbon(aes(day, ymin = lcl, ymax = ucl), alpha = 0.1) +
+  xlab("Day of Year") + 
+  ylab("Total Biomass Mg/ha") +
+  theme_classic()
 ```
 
 ```{r, echo=FALSE, out.width="400px"}
 knitr::include_graphics("biocro_biomass_welsch_setaria.png")
+knitr::include_graphics("biocro_biomass_ts_welsch_setaria.png")
 ```
