--- a/BioCro/general/biocro_in_pecan.Rmd
+++ b/BioCro/general/biocro_in_pecan.Rmd
@@ -1,9 +1,13 @@
 ---
+title: "How to Run the BioCro Model Using PEcAn"
+author: "Kristina Riemer, University of Arizona"
 output: github_document
 urlcolor: blue
 ---
 
-# Section 1: BioCro Run Using the Virtual Machine
+This vignette shows how to run the BioCro model using general data that should be in all version of BETYdb. The first section details how to use the VM, while the second uses the University of Arizona's server Welsch. 
+
+## Section 1: BioCro Run Using the Virtual Machine
 
 1. Download the **VirtualBox** application from [here](https://www.virtualbox.org/) and open the application. Additionally, download the extension pack from the [Downloads page](https://www.virtualbox.org/wiki/Downloads) under the 'VirtualBox 6.0.6 Oracle VM VirtualBox Extension Pack' section. Add the extension pack by opening VirtualBox application, going to "Preferences" -> "Extensions", clicking on the blue box with the green plus sign, and adding the downloaded .vbox-extpack file. 
 
@@ -26,7 +30,7 @@ PEcAn.visualization::plot.netcdf("biocro_results/out/SA-salix-chi_leaf-0.159/200
 knitr::include_graphics("biocro_lai_vm.png")
 ```
 
-# Section 2: BioCro Run Using University of Arizona's RStudio Instance
+## Section 2: BioCro Run Using University of Arizona's RStudio Instance
 
 1. Access RStudio in a browser by navigating to [welsch.cyverse.org:8787/](welsch.cyverse.org:8787/). Log in using your username and password, which can be requested [here](). 
 
@@ -312,335 +316,3 @@ PEcAn.visualization::plot.netcdf("biocro_results/out/SA-salix-chi_leaf-0.159/200
 knitr::include_graphics("biocro_lai_welsch.png")
 ```
 
-# Section 3: BioCro Run Using Welsch With New PFT
-
-1. Access RStudio in a browser by navigating to [welsch.cyverse.org:8787/](welsch.cyverse.org:8787/). Log in using your username and password, which can be requested [here](). 
-
-2. Create a new folder that will hold the necessary files for the run in your home directory by going to the Terminal tab and typing in `mkdir biocro_darpa_files`. This new folder should appear in your file structure under the Files tab. 
-
-3. The first needed file is an XML that contains the configuration information required to get the data and run the model. This example run is for the Setaria wild type PFT for a site at the Donald Danforth Center in St. Louis, MO using weather data from the entire year of 2004. This runs a meta-analysis on specific leaf area (SLA), sensitivity analysis and variance decomposition on eight parameters, and 200 ensemble runs for total biomass. 
-
-    Create the file by clicking the new file button with the green plus sign in the upper left hand corner and selecting text file. Copy and paste the content below into this file, click the save button, and save this file as `pecan.biocro.darpa.xml` in the `biocro_darpa_files` folder. 
-
-```{r, eval=FALSE}
-<pecan>
-  <outdir>biocro_darpa_results</outdir>
-
-  <database>
-    <bety>
-      <driver>PostgreSQL</driver>
-      <user>bety</user>
-      <password>bety</password>
-      <host>postgres</host>
-      <dbname>bety</dbname>
-      <write>FALSE</write>
-    </bety>
-    <dbfiles>biocro_darpa_results/dbfiles</dbfiles>
-  </database>
-
-  <pfts>
-    <pft>
-      <name>SetariaWT</name>
-    </pft>
-  </pfts>
-
-  <ensemble>
-    <size>200</size>
-    <variable>TotLivBiom</variable>
-  </ensemble>
-
-  <meta.analysis>
-    <iter>3000</iter>
-    <random.effects>TRUE</random.effects>
-    <threshold>1.2</threshold>
-    <update>AUTO</update>
-  </meta.analysis>
-
-  <sensitivity.analysis>
-    <variable>TotLivBiom</variable>
-  </sensitivity.analysis>
-
-  <model>
-    <type>BIOCRO</type>
-    <binary>/home/kristinariemer/pecan/models/biocro/inst/biocro.Rscript</binary>
-    <revision>0.95</revision>
-  </model>
-
-  <run>
-    <site>
-      <id>9000000004</id>
-    </site>
-    <inputs>
-      <met>
-        <output>BIOCRO</output>
-        <path>/home/kristinariemer/pecan/models/biocro/tests/testthat/data/US-Bo1</path>
-      </met>
-    </inputs>
-      <start.date>2004/01/01</start.date>
-      <end.date>2004/12/30</end.date>
-    <host>
-      <name>localhost</name>
-    </host>
-  </run>
-</pecan>
-```
-
-4. The second file that needs to be created is an R script that runs through all of PEcAn's functions to run the model and produce the output. Create this file by clicking on the new file button and selecting R script. Copy and paste the below text into the new script and save in the `biocro_darpa_files` folder as `workflow.R`. 
-
-```{r, eval=FALSE, size="small"}
-#!/usr/bin/env Rscript
-#-------------------------------------------------------------------------------
-# Copyright (c) 2012 University of Illinois, NCSA.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the 
-# University of Illinois/NCSA Open Source License
-# which accompanies this distribution, and is available at
-# http://opensource.ncsa.illinois.edu/license.html
-#-------------------------------------------------------------------------------
-
-# ----------------------------------------------------------------------
-# Load required libraries
-# ----------------------------------------------------------------------
-library(PEcAn.all)
-library(PEcAn.utils)
-library(RCurl)
-
-# make sure always to call status.end
-options(warn=1)
-options(error=quote({
-  PEcAn.utils::status.end("ERROR")
-  PEcAn.remote::kill.tunnel(settings)
-  if (!interactive()) {
-    q(status = 1)
-  }
-}))
-
-#options(warning.expression=status.end("ERROR"))
-
-
-# ----------------------------------------------------------------------
-# PEcAn Workflow
-# ----------------------------------------------------------------------
-# Open and read in settings file for PEcAn run.
-args <- commandArgs(trailingOnly = TRUE)
-if (is.na(args[1])){
-  settings <- PEcAn.settings::read.settings("pecan.xml") 
-} else {
-  settings.file <- args[1]
-  settings <- PEcAn.settings::read.settings(settings.file)
-}
-
-# Check for additional modules that will require adding settings
-if("benchmarking" %in% names(settings)){
-  library(PEcAn.benchmark)
-  settings <- papply(settings, read_settings_BRR)
-}
-
-if("sitegroup" %in% names(settings)){
-  if(is.null(settings$sitegroup$nSite)){
-    settings <- PEcAn.settings::createSitegroupMultiSettings(settings, 
-                                                             sitegroupId = settings$sitegroup$id)
-  } else {
-    settings <- PEcAn.settings::createSitegroupMultiSettings(settings, 
-                                                             sitegroupId = settings$sitegroup$id,
-                                                             nSite = settings$sitegroup$nSite)
-  }
-  settings$sitegroup <- NULL ## zero out so don't expand a second time if re-reading
-}
-
-# Update/fix/check settings. Will only run the first time it's called, unless force=TRUE
-settings <- PEcAn.settings::prepare.settings(settings, force = FALSE)
-
-# Write pecan.CHECKED.xml
-PEcAn.settings::write.settings(settings, outputfile = "pecan.CHECKED.xml")
-
-# start from scratch if no continue is passed in
-statusFile <- file.path(settings$outdir, "STATUS")
-if (length(which(commandArgs() == "--continue")) == 0 && file.exists(statusFile)) {
-  file.remove(statusFile)
-}
-
-# Do conversions
-settings <- PEcAn.workflow::do_conversions(settings)
-
-# Query the trait database for data and priors
-if (PEcAn.utils::status.check("TRAIT") == 0){
-  PEcAn.utils::status.start("TRAIT")
-  settings <- PEcAn.workflow::runModule.get.trait.data(settings)
-  PEcAn.settings::write.settings(settings, outputfile='pecan.TRAIT.xml')
-  PEcAn.utils::status.end()
-} else if (file.exists(file.path(settings$outdir, 'pecan.TRAIT.xml'))) {
-  settings <- PEcAn.settings::read.settings(file.path(settings$outdir, 'pecan.TRAIT.xml'))
-}
-
-# Run the PEcAn meta.analysis
-if(!is.null(settings$meta.analysis)) {
-  if (PEcAn.utils::status.check("META") == 0){
-    PEcAn.utils::status.start("META")
-    PEcAn.MA::runModule.run.meta.analysis(settings)
-    PEcAn.utils::status.end()
-  }
-}
-
-# Write model specific configs
-if (PEcAn.utils::status.check("CONFIG") == 0){
-  PEcAn.utils::status.start("CONFIG")
-  settings <- PEcAn.workflow::runModule.run.write.configs(settings)
-  PEcAn.settings::write.settings(settings, outputfile='pecan.CONFIGS.xml')
-  PEcAn.utils::status.end()
-} else if (file.exists(file.path(settings$outdir, 'pecan.CONFIGS.xml'))) {
-  settings <- PEcAn.settings::read.settings(file.path(settings$outdir, 'pecan.CONFIGS.xml'))
-}
-
-if ((length(which(commandArgs() == "--advanced")) != 0) && 
-    (PEcAn.utils::status.check("ADVANCED") == 0)) {
-  PEcAn.utils::status.start("ADVANCED")
-  q();
-}
-
-# Start ecosystem model runs
-if (PEcAn.utils::status.check("MODEL") == 0) {
-  PEcAn.utils::status.start("MODEL")
-  PEcAn.remote::runModule.start.model.runs(settings, stop.on.error = FALSE)
-  PEcAn.utils::status.end()
-}
-
-# Get results of model runs
-if (PEcAn.utils::status.check("OUTPUT") == 0) {
-  PEcAn.utils::status.start("OUTPUT")
-  runModule.get.results(settings)
-  PEcAn.utils::status.end()
-}
-
-# Run ensemble analysis on model output.
-if ('ensemble' %in% names(settings) & PEcAn.utils::status.check("ENSEMBLE") == 0) {
-  PEcAn.utils::status.start("ENSEMBLE")
-  runModule.run.ensemble.analysis(settings, TRUE)
-  PEcAn.utils::status.end()
-}
-
-# Run sensitivity analysis and variance decomposition on model output
-if ('sensitivity.analysis' %in% names(settings) & PEcAn.utils::status.check("SENSITIVITY") == 0) {
-  PEcAn.utils::status.start("SENSITIVITY")
-  runModule.run.sensitivity.analysis(settings)
-  PEcAn.utils::status.end()
-}
-
-# Run parameter data assimilation
-if ('assim.batch' %in% names(settings)) {
-  if (PEcAn.utils::status.check("PDA") == 0) {
-    PEcAn.utils::status.start("PDA")
-    settings <- PEcAn.assim.batch::runModule.assim.batch(settings)
-    PEcAn.utils::status.end()
-  }
-}
-
-# Run state data assimilation
-if ('state.data.assimilation' %in% names(settings)) {
-  if (PEcAn.utils::status.check("SDA") == 0) {
-    PEcAn.utils::status.start("SDA")
-    settings <- sda.enfk(settings)
-    PEcAn.utils::status.end()
-  }
-}
-
-# Run benchmarking
-if("benchmarking" %in% names(settings) & "benchmark" %in% names(settings$benchmarking)){
-  PEcAn.utils::status.start("BENCHMARKING")
-  results <- papply(settings, function(x) calc_benchmark(x, bety))
-  PEcAn.utils::status.end()
-}
-
-# Pecan workflow complete
-if (PEcAn.utils::status.check("FINISHED") == 0) {
-  PEcAn.utils::status.start("FINISHED")
-  PEcAn.remote::kill.tunnel(settings)
-  db.query(paste("UPDATE workflows SET finished_at=NOW() WHERE id=",
-                 settings$workflow$id, "AND finished_at IS NULL"),
-           params = settings$database$bety)
-  
-  # Send email if configured
-  if (!is.null(settings$email) && !is.null(settings$email$to) && (settings$email$to != "")) {
-    sendmail(settings$email$from, settings$email$to,
-             paste0("Workflow has finished executing at ", base::date()),
-             paste0("You can find the results on ", settings$email$url))
-  }
-  PEcAn.utils::status.end()
-}
-
-db.print.connections()
-print("---------- PEcAn Workflow Complete ----------")
-
-```
-
-5. We will then run the newly created XML file through the R script. Then in the Terminal run `biocro_darpa_files/workflow.R --settings biocro_darpa_files/pecan.biocro.darpa.xml`. 
-
-    If this returns an error that says `Permission denied`, first run `chmod u+x biocro_darpa_files/workflow.R` in the terminal to get sufficient permissions to the newly created workflow.R file. Then reattempt running the workflow. If the error occurs again, run `chmod u+x biocro_darpa_files/pecan.biocro.darpa.xml`. 
-    
-    This will take a few minutes to finish. The last line in the console should appear as follows. 
-
-```{r, eval=FALSE}
-[1] "---------- PEcAn Workflow Complete ----------"
-```
-
-6. The results for these files will appear in a new folder called `biocro_darpa_results`. 
-
-    To test if this works, you can plot the results from the ensemble runs for biomass. The following code will produce a plot of the time series throughout a year of biomass, of the median, 25th quantile, and 75th quantile for each time step. Create a new R script, copy and paste this code into the script, and run it to produce the figure. 
-
-```{r, eval=FALSE}
-# Ensemble Plots
-library(ggplot2)
-library(data.table)
-
-## Biomass Distributions
-load("~/biocro_darpa_results/ensemble.output.NOENSEMBLEID.TotLivBiom.2004.2004.Rdata")
-ens <- cbind(as.data.frame(t(data.frame(ensemble.output))))
-colnames(ens) <- "TotLivBiom"
-theme_set(theme_minimal() + 
-            theme(axis.text.x = 
-                    element_text(vjust = -1), 
-                  axis.text.y = element_blank(),
-                  axis.ticks = element_blank(), 
-                  axis.line = element_blank(), 
-                  axis.title.x = element_blank(), 
-                  axis.title.y = element_blank(), 
-                  panel.grid.minor = element_blank(), 
-                  panel.border = element_blank()))
-ggplot(data = ens) +
-  geom_density(aes(x = TotLivBiom))
-
-## Biomass Time Series with Quantiles
-load('~/biocro_darpa_results/out/SA-median/biocro_output.RData')
-timeseries <- data.table(day = rep(biocro_result$doy, each = 24), hour = 0:23)
-rm(biocro_result)
-
-load("~/biocro_darpa_results/ensemble.ts.NOENSEMBLEID.TotLivBiom.2004.2004.Rdata")
-ens2 <- t(ensemble.ts[['TotLivBiom']])
-
-ens2[is.na(ens2)] <- 0
-mean <- rowMeans(ens2, na.rm = TRUE)
-median <- apply(ens2, 1, function(x) median(x, na.rm = TRUE))
-sd <- apply(ens2, 1, function(x) sd(x, na.rm = TRUE))
-lcl <- apply(ens2, 1, function(x) quantile(x, probs = c(0.025), na.rm = TRUE))
-ucl <- apply(ens2, 1, function(x) quantile(x, probs = c(0.975), na.rm = TRUE))
-
-data_table <- data.table(timeseries, cbind(mean = mean, median = median, 
-                                           sd = sd, lcl = lcl, ucl = ucl))
-data_table_day <- data_table[, list(mean = sum(mean),  median = sum(median), sd = sqrt(sum(sd^2)),
-                                    lcl = sum(lcl), ucl = sum(ucl)), by = day]
-
-daily_bio <- data.frame(data_table_day)
-sd_scale <- 5
-ggplot(data = daily_bio) + 
-  geom_line(aes(day, y = mean)) +
-  geom_ribbon(aes(day, ymin = mean - sd_scale * sd, ymax = mean + sd_scale * sd), alpha = 0.1) +
-  geom_ribbon(aes(day, ymin = lcl, ymax = ucl), alpha = 0.1) +
-  xlab("Day of Year") + 
-  ylab("Total Biomass Mg/ha") +
-  theme_classic()
-```
-
-```{r, echo=FALSE, out.width="400px"}
-knitr::include_graphics("biocro_biomass_welsch_setaria.png")
-knitr::include_graphics("biocro_biomass_ts_welsch_setaria.png")
-```
