--- a/BioCro/DARPA/biocro_biomass_darpa.Rmd
+++ b/BioCro/DARPA/biocro_biomass_darpa.Rmd
@@ -79,6 +79,32 @@ time <- data.frame(year = rep(2019, 8760),
 OpBioGro_weather <- data.frame(time, solarR = downscaled.result$FSDS, DailyTemp.C, RH, WindSpeed, precip)
 ```
 
+Summarize Weather
+
+```{r}
+skimr::skim(OpBioGro_weather)
+```
+
+```{r}
+tabplot::tableplot(OpBioGro_weather)
+```
+
+```{r, fig.width=10}
+t <- OpBioGro_weather %>% 
+  mutate(date = new.date$date) %>% 
+  dplyr::select(solarR:date) %>% 
+  tidyr::pivot_longer(cols = solarR:precip)
+t
+
+library(ggplot2)
+ggplot(t, aes(date, value)) +
+  geom_line(size = 0.1) + 
+  facet_wrap(~name, ncol = 1, scales = 'free_y')
+
+ggplot(t %>% filter(month(date) ==1), aes(date, value)) +
+  geom_line(size = 0.1) + 
+  facet_wrap(~name, ncol = 1, scales = 'free_y')
+```
 ### Biomass data
 
 Plants all started to grow at same time (Jan 3, 2019). Plants harvested on six different dates, from Jan 15 - Feb 19. The plants were grown at three different temperatures, and there were three genotypes. Initially only using data for the middle temperature (31*C) and the first replicate from that. 
@@ -95,20 +121,35 @@ biomass_data_all <- read.csv("biomass_setaria_me034_gehan.csv") %>%
   slice(1) %>% 
   ungroup()
 
+skimr::skim(biomass_data_all %>% select(temperature_celsius, panicle.FW.g.:roots.DW..mg.))
+```
+
+```{r}
+s <- biomass_data_all %>% 
+  mutate(date = lubridate::mdy(biomas_harvested)) %>% 
+  select(temperature_celsius, date, contains('.DW.')) %>% 
+  tidyr::pivot_longer(panicle.DW.mg.:roots.DW..mg.)
+
+ggplot(s, aes(date, value, color = name)) +
+  geom_line() 
+```
+
+
+```{r}
 biomass_data_single <- biomass_data_all %>% 
-  mutate(days_grown = as.Date(as.character(biomas_harvested),format="%m/%d/%Y") - as.Date(as.character(seeds_in_germination),format="%m/%d/%Y"))
+  mutate(days_grown = as.integer(as.Date(as.character(biomas_harvested),format="%m/%d/%Y") - as.Date(as.character(seeds_in_germination),format="%m/%d/%Y")))
 
 weather_only_run <- BioGro(OpBioGro_weather, day1 = 1, dayn = 365)
 weather_only_run_df <- as.data.frame(unclass(weather_only_run)[1:11]) %>%
   select(Hour, DayofYear, ThermalT) %>% 
   filter(Hour == 0, 
-         DayofYear %in% biomass_data_single$days_grown)
+         DayofYear %in% biomass_data_single$days_grown) %>% 
+  mutate(days_grown = DayofYear)
 
 SLA_mg <- 80 / 1000000
-OpBioGro_biomass <- left_join(biomass_data_single, weather_only_run_df, by = c("days_grown" = "DayofYear")) %>% 
-  select(ThermalT, Stem = stemDW.mg., Leaf = leaf.DW.mg., Root = roots.DW..mg.) %>% 
+OpBioGro_biomass <- left_join(biomass_data_single, weather_only_run_df, by = "days_grown") %>% 
+  select(ThermalT, Stem = stemDW.mg., Leaf = leaf.DW.mg., Root = roots.DW..mg., Grain = panicle.DW.mg.) %>% 
   mutate(Rhizome = rep(0, 6), 
-         Grain = rep(0, 6), 
          LAI = SLA_mg * Leaf)
 OpBioGro_biomass <- data.frame(OpBioGro_biomass) %>% 
   arrange(ThermalT)
@@ -117,7 +158,32 @@ OpBioGro_biomass <- data.frame(OpBioGro_biomass) %>%
 ### Estimate coefficients
 
 ```{r}
-#coef_estimates <- valid_dbp(idbp(OpBioGro_biomass))
-#biomass_coefs <- OpBioGro(phen = 0, WetDat = weather_data, data = biomass_data_by_tt, iCoef = approx_biomass_coefs)
+coef_estimates <- valid_dbp(idbp(OpBioGro_biomass))
+
+z <- OpBioGro_biomass
+library(ggplot2)
+library(tidyverse)
+ggplot(z %>% tidyr::pivot_longer(Stem:LAI), aes(ThermalT, value, color = name)) +
+  geom_line() 
+# z[5,2:4] <- c(776, 318, 222)
+# z[6,2:4] <- c(800, 368, 252)
+# ggplot(z %>% tidyr::pivot_longer(Stem:LAI), aes(ThermalT, value, color = name)) +
+#   geom_line() 
+
+zz<-rbind(rep(0,6), z)
+
+p <- phenoParms() 
+p[1:6] <- z$ThermalT#c(400, 600, 800, 1000, 1200, 1500)
+p['kRhizome1'] <- 0
+p['kRhizome2'] <- 0
+p['kRhizome3'] <- 0
+p['kRhizome4'] <- 0
+p['kRhizome5'] <- 0
+p['kRhizome6'] <- 0
+
+x <- idbp(z, phenoControl = p)
+x[8] <- 0
+valid_dbp(x)
+biomass_coefs <- OpBioGro(phen = 0, WetDat = OpBioGro_weather, data = OpBioGro_biomass, iCoef = x)
 ```
 
