Improve regional runs vignette text

--- a/BioCro/DARPA/biocro_regional_darpa.Rmd
+++ b/BioCro/DARPA/biocro_regional_darpa.Rmd
@@ -1,13 +1,13 @@
 ---
 title: "How to Do Regional Runs on DARPA Data Using BioCro Model"
-author: "Kristina Riemer, University of Arizona"
+author: "Author: Kristina Riemer"
 output: github_document
 urlcolor: blue
 ---
 
 ## Read in libraries
 
-```{r, eval=FALSE}
+```{r}
 library(ncdf4)
 library(PEcAn.all)
 library(PEcAn.BIOCRO)
@@ -20,24 +20,24 @@ library(gganimate)
 
 ## Read in input files
 
-Past run config file: 
-```{r, eval=FALSE}
-config <- read.biocro.config("biocro_darpa_results/run/SA-median/config.xml")
+The config file here is based on [the default *Setaria* file](https://github.com/PecanProject/pecan/blob/ac5aef2e755a8961591196428753eb184fb4c6cb/models/biocro/inst/extdata/defaults/setaria.xml) used for PEcAn. This one was generated from a run on the Sentinel project data. 
+```{r}
+config <- read.biocro.config("biocro_regional_darpa_files/config.xml")
 ```
 
-Data files: 
-```{r, eval=FALSE}
-metfile <- "biocro_regional_files/champaign.nc"
+A weather data file, such as that read in below, is required to run BioCro. The weather data comes from [the North American Regional Reanalysis (NARR)](https://www.esrl.noaa.gov/psd/data/gridded/data.narr.html) global gridded dataset provided by NOAA. We are using a subset of NARR in the eastern part of Illinois, near Chapaign. This subset is in the Pecan standard format, which is a netCDF file. The dimensions are latitude x longitude x time (3 x 6 x 93,504). These time steps are every three hours from 1979 through 2010. There are 10 weather variables, including temperature, precipitation flux, and solar radiation. 
+
+We also read in a soil file, which is not necessary but is useful. These data are from [the harmonized world soil database](http://www.fao.org/soils-portal/soil-survey/soil-maps-and-databases/harmonized-world-soil-database-v12/en/). 
+```{r}
+metfile <- "biocro_regional_darpa_files/champaign.nc"
 met_champaign <- nc_open(metfile)
-soil_nc <- nc_open("biocro_regional_files/hwsd.nc")
+soil_nc <- nc_open("biocro_regional_darpa_files/hwsd.nc")
 ```
 
 ## Convert weather data
 
-The weather data is a subset of NARR around Champaign, Illinois. It's currently in the Pecan standard format, which is a netCDF file. The dimensions are 3 latitude, 6 longitude, and 93,504 time steps, which are hourly from 1979 through 2010. There are various weather variables, including temperature, precipitation flux, and solar radiation. 
-
-This is converted to the met format for BioCro. Data for each of the locations (unique latitude and longitude combos) is turned into a flat csv file, with one row per hour for the ~32 years. 
-```{r, eval=FALSE}
+The weather dataset has to be converted from netCDF file format to the format required for BioCro. Data for each of the locations (unique latitude and longitude combinations) is turned into a flat csv file, with one row per hour for the time range of the weather dataset (approximately 32 years). 
+```{r}
 # Get all locations
 lat <- ncvar_get(met_champaign, "latitude")
 lon <- ncvar_get(met_champaign, "longitude")
@@ -51,6 +51,7 @@ start_date <- as.Date(time_origin2) + time_vec[1]
 end_date <- as.Date(time_origin2) + time_vec[length(time_vec)] - 1
 
 # Convert met from Pecan to BioCro format for all locations
+dir.create("biocro_regional_darpa_files/biocro_met_by_location/")
 met_nc <- ncdf4::nc_open(metfile)
 point <- 1
 for(point in 1:nrow(latlon)){
@@ -60,8 +61,8 @@ for(point in 1:nrow(latlon)){
   biocro_met <- biocro_met %>%
     mutate(RH = case_when(RH >= 1 ~ 0.99999999999999,
                           RH < 1 ~ RH))
-  biocro_met_path <- paste0("biocro_regional_files/biocro_met_by_location/biocromet-", 
-                            latlon$lat[point], "-", latlon$lon[point], ".2004.csv")
+  biocro_met_path <- paste0("biocro_regional_darpa_files/biocro_met_by_location/biocromet-", 
+                            latlon$lat[point], "-", latlon$lon[point], ".2010.csv")
   write.csv(biocro_met, biocro_met_path, row.names = FALSE)
   
 }
@@ -69,30 +70,31 @@ for(point in 1:nrow(latlon)){
 
 ## Run BioCro on each location
 
-BioCro is run on each of the locations weather and soil data to produce daily estimates for a year for biomass, transpiration, etc. 
-```{r, eval=FALSE}
+The BioCro model is then run on weather and soil data for each of the locations, using *Setaria* input data. This produces hourly, daily, and yearly estimates for biomass, transpiration, etc. for the time range we specified in the config file. We are using only the daily values. 
+```{r}
+dir.create("biocro_regional_darpa_files/results_by_location/")
 biocro_results <- c()
 for(point in 1:nrow(latlon)){
-  biocro_met_path <- paste0("biocro_regional_files/biocro_met_by_location/biocromet-", 
+  biocro_met_path <- paste0("biocro_regional_darpa_files/biocro_met_by_location/biocromet-", 
                             latlon$lat[point], "-", latlon$lon[point])
   biocro_results_all <- run.biocro(latlon$lat[point], latlon$lon[point],
                                metpath = biocro_met_path,
                                soil.nc = soil_nc,
                                config = config)
   biocro_results_daily <- biocro_results_all$daily
-  write.csv(biocro_results_daily, paste0("biocro_regional_files/results_by_location/daily-", 
+  write.csv(biocro_results_daily, paste0("biocro_regional_darpa_files/results_by_location/daily-", 
                                          latlon$lat[point], "-", latlon$lon[point], ".csv"))
   biocro_results_daily$lat <- latlon$lat[point]
   biocro_results_daily$lon <- latlon$lon[point]
   biocro_results <- rbind(biocro_results, biocro_results_daily)
-  write.csv(biocro_results, "biocro_regional_files/all_biocro_results.csv")
+  write.csv(biocro_results, "biocro_regional_darpa_files/all_biocro_results.csv")
 }
 ```
 
 ## Plot estimated biomass
 
-The code below produces a video of a map of total biomass (stem, leaf, grain, rhizome, and root) estimates across time. 
-```{r, eval=FALSE}
+The results for total biomass (the sum of stem, leaf, grain, rhizome, and root biomasses) are then visualized. The code below plots these values across the 18 locations on a map of the state of Illinois, and then runs through these plots for each day of the year as a .gif. 
+```{r}
 biocro_results <- biocro_results %>% 
   mutate(date = as.Date(doy, "2003-12-31"), 
          latlon = paste0(lat, lon), 
@@ -105,7 +107,7 @@ ggplot(biocro_results, aes(x = date, y = total_biomass, group = latlon, color = 
 background_map <- map_data("state") %>% 
   filter(region == "illinois")
 
-colfunc <- colorRampPalette(c("darkgreen", "yellow"))
+colfunc <- colorRampPalette(c("yellow", "darkgreen"))
 biomass_animation <- ggplot() +
   geom_polygon(data = background_map, aes(x = long, y = lat, group = group), 
                fill = "white", color = "black") +
@@ -117,7 +119,7 @@ biomass_animation <- ggplot() +
 
 animate(biomass_animation, fps = 100)
 anim_save("biomass_animation_champaign.mp4", animation = biomass_animation, 
-          path = "./Dropbox/Documents/UofA/Misc/", fps = 100)
+          path = "biocro_regional_darpa_files/", fps = 100)
 ```
 
 
